@@ -1,5 +1,10 @@
 2006-08-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
 
+	* src/GParted_Core.cc: fixed small issue with lp_partition ->geom
+	  stuff sometimes losing values when going out of scope.
+
+2006-08-13 Bart Hakvoort <hakvoort@cvs.gnome.org>
+
 	* include/GParted_Core.h,
 	  src/GParted_Core.cc: couple of cleanups in operationhandling and
 	  initalizing of p_filesystem.
